# suechef

./: .cursorignore  .dockerignore  .env.example  .gitignore  .mcp.json  .mcp.test.json  CLAUDE.md  DATABASE_MIGRATION_FIX.md  Dockerfile  Dockerfile.modular  MODULARIZATION_COMPLETED.md  README.md  courtlistener_tools.py  database_migration_fix.py  database_schema.py  debug_courtlistener_api.py  docker-compose.yml  example-claude-config.json  example-workflows.md  init-postgres.sql  legal_entity_types.py  legal_tools.py  llms.txt  main.py  main_legacy.py  main_modular.py  pyproject.toml  pytest.ini  setup.py  test_connection_simple.py  test_courtlistener_fix.py  test_event_crud.py  test_import_bug_fix.py  test_modular.py  test_system_status.py  verify-docker-setup.py
bugs/: courtlistener_integration.md
docs/: CHRONOLOGY_FIXES.md  CLAUDE_DESKTOP_SETUP.md  COURTLISTENER_FIX.md  DOCUMENTATION_ROADMAP.md  GRAPHITI_BEST_PRACTICES.md  MODULARIZATION_COMPLETED.md  MODULARIZATION_PROPOSAL.md  POSTMORTEM_COURTLISTENER_INIT_FAILURE.md  POSTMORTEM_DATABASE_INFRASTRUCTURE_FIX.md
docs/archive/: README.md
src/config/: settings.py
src/core/database/: initializer.py  manager.py  schemas.py
src/services/: base.py
src/services/legal/: event_service.py  event_service_robust.py  snippet_service.py
src/utils/: embeddings.py  parameter_parsing.py
tests/: README.md  conftest.py
tests/integration/tools/: test_mcp_tools.py
tests/unit/services/: test_event_service.py  test_event_service_simple.py
tests/unit/utils/: test_parameter_parsing.py
