[project]
name = "unified-legal-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "eyecite>=2.7.5",
    "fastmcp>=2.5.2",
    "graphiti-core>=0.11.6",
    "neo4j>=5.28.1",
    "psycopg2-binary>=2.9.10",
    "qdrant-client>=1.14.2",
    "sqlalchemy>=2.0.41",
]
